test/langtools/tools/javac/switchextra/SwitchNoExtraTypes.out
SwitchNoExtraTypes.java:12:16: compiler.err.selector.type.not.allowed: boolean
SwitchNoExtraTypes.java:19:16: compiler.err.selector.type.not.allowed: long
SwitchNoExtraTypes.java:26:16: compiler.err.selector.type.not.allowed: float
SwitchNoExtraTypes.java:33:16: compiler.err.selector.type.not.allowed: double
4 errors
